# Payment-Platform-Test

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/docker/: Dockerfile  entrypoint.sh
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_seed.py
backend/src/app/: config.py  exceptions.py  main.py
backend/src/app/api/: deps.py
backend/src/app/api/middleware/: auth.py  cors.py  db.py  errors.py
backend/src/app/api/v1/: admin.py  admin_auth.py  auth.py  users.py  webhook.py
backend/src/app/db/: session.py
backend/src/app/db/models/: __init__.py  account.py  admin.py  payment.py  user.py
backend/src/app/repositories/: account.py  admin.py  base.py  payment.py  user.py
backend/src/app/schemas/: account.py  payment.py  user.py  webhook.py
backend/src/app/security/: jwt.py  password.py  signature.py
backend/src/app/services/: admin.py  auth.py  payment.py  user.py
backend/tests/: conftest.py
backend/tests/integration/: test_admin_crud.py  test_auth.py  test_users_me.py  test_webhook_auto_create_account.py  test_webhook_bad_signature.py  test_webhook_concurrency.py  test_webhook_happy_path.py  test_webhook_idempotency.py  test_webhook_unknown_user.py
backend/tests/unit/: test_jwt.py  test_password.py  test_signature.py
docs/ADR/: 0001-separate-user-admin-tables.md  0002-async-stack.md  (+1 more)
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
scripts/: send_webhook.sh  smoke.sh
(+57 files in other folders)
