[project]
name = "payment-platform-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "sanic==23.12.1",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "pydantic[email]==2.10.4",
    "pydantic-settings==2.7.1",
    "PyJWT==2.10.1",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    "uvloop==0.21.0",
    "greenlet==3.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
    "mypy==1.14.1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
exclude = ["migrations/", "tests/"]

[[tool.mypy.overrides]]
module = ["sanic.*", "asyncpg.*", "passlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
